--- a/official_web_demo/templates/video.html
+++ b/official_web_demo/templates/video.html
@@ -22,30 +22,46 @@
     <h1>筛选</h1>
     <div class="classification">
         {% if kwargs.classification_id  == 0 %}
-            <a class="active" href="video-0-{{ kwargs.level_id }}.html">全部</a>
+            <a class="active" href="video-0-{{ kwargs.level_id }}-{{ kwargs.status }}.html">全部</a>
         {% else %}
-            <a href="video-0-{{ kwargs.level_id }}.html">全部</a>
+            <a href="video-0-{{ kwargs.level_id }}-{{ kwargs.status }}.html">全部</a>
         {% endif %}
         {% for classification in classification_list %}
             {% if classification.id == kwargs.classification_id %}
                 <a class="active"
-                   href="video-{{ classification.id }}-{{ kwargs.level_id }}.html">{{ classification.name }}</a>
+                   href="video-{{ classification.id }}-{{ kwargs.level_id }}-{{ kwargs.status }}.html">{{ classification.name }}</a>
             {% else %}
-                <a href="video-{{ classification.id }}-{{ kwargs.level_id }}.html">{{ classification.name }}</a>
+                <a href="video-{{ classification.id }}-{{ kwargs.level_id }}-{{ kwargs.status }}.html">{{ classification.name }}</a>
             {% endif %}
         {% endfor %}
     </div>
     <div class="level">
         {% if kwargs.level_id == 0 %}
-            <a class="active" href="video-{{ kwargs.classification_id }}-0.html">全部</a>
+            <a class="active" href="video-{{ kwargs.classification_id }}-0-{{ kwargs.status }}.html">全部</a>
         {% else %}
-            <a href="video-{{ kwargs.classification_id }}-0.html">全部</a>
+            <a href="video-{{ kwargs.classification_id }}-0-{{ kwargs.status }}.html">全部</a>
         {% endif %}
         {% for level in level_list %}
             {% if level.id == kwargs.level_id %}
-                <a class="active" href="video-{{ kwargs.classification_id }}-{{ level.id }}.html">{{ level.title }}</a>
+                <a class="active"
+                   href="video-{{ kwargs.classification_id }}-{{ level.id }}-{{ kwargs.status }}.html">{{ level.title }}</a>
             {% else %}
-                <a href="video-{{ kwargs.classification_id }}-{{ level.id }}.html">{{ level.title }}</a>
+                <a href="video-{{ kwargs.classification_id }}-{{ level.id }}-{{ kwargs.status }}.html">{{ level.title }}</a>
+            {% endif %}
+        {% endfor %}
+    </div>
+    <div class="status">
+        {% if kwargs.status == 0 %}
+            <a class="active" href="video-{{ kwargs.classification_id }}-{{ kwargs.level_id }}-0.html">全部</a>
+        {% else %}
+            <a href="video-{{ kwargs.classification_id }}-{{ kwargs.level_id }}-0.html">全部</a>
+        {% endif %}
+        {% for status in status_list %}
+            {% if status.key == kwargs.status %}
+                <a class="active"
+                   href="video-{{ kwargs.classification_id }}-{{ kwargs.level_id }}-{{ status.key }}.html">{{ status.value }}</a>
+            {% else %}
+                <a href="video-{{ kwargs.classification_id }}-{{ kwargs.level_id }}-{{ status.key }}.html">{{ status.value }}</a>
             {% endif %}
         {% endfor %}
     </div>
@@ -59,6 +75,37 @@
         {% endfor %}
     </div>
 </div>
+<script type="text/javascript">
+    var browser = {
+        versions: function () {
+            var u = navigator.userAgent, app = navigator.appVersion;
+            return {//移动终端浏览器版本信息
+                trident: u.indexOf('Trident') > -1, //IE内核
+                presto: u.indexOf('Presto') > -1, //opera内核
+                webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
+                gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
+                mobile: !!u.match(/AppleWebKit.*Mobile.*/), //是否为移动终端
+                ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
+                android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
+                iPhone: u.indexOf('iPhone') > -1, //是否为iPhone或者QQHD浏览器
+                iPad: u.indexOf('iPad') > -1, //是否iPad
+                webApp: u.indexOf('Safari') == -1 //是否web应该程序，没有头部与底部
+            };
+        }(),
+        language: (navigator.browserLanguage || navigator.language).toLowerCase()
+    };
+
+    /**
+     * 判断浏客户端是否为移动端
+     */
+    function isMobile() {
+        if (browser.versions.mobile || browser.versions.ios || browser.versions.android ||
+            browser.versions.iPhone || browser.versions.iPad) {
+            return true;
+        }
+        return false;
+    }
+</script>
 
 </body>
 </html>
