企业官网示例　瀑布流　上传数据库及图片文件

--- a/official_web_demo/templates/img_video2.html
+++ b/official_web_demo/templates/img_video2.html
@@ -5,7 +5,7 @@
     <title>img_video2</title>
     <style>
         .img_video {
-            width: 2000px;
+            width: 100%;
         }
 
         .img_video .item {
