--- a/official_web_demo/templates/img_video.html
+++ b/official_web_demo/templates/img_video.html
@@ -5,7 +5,7 @@
     <title>img_video</title>
     <style>
         .img_video {
-            width: 2000px;
+            width: 100%;
         }
 
         .img_video .item {
