--- a/dachagui_web/templates/ca_redis.html
+++ b/dachagui_web/templates/ca_redis.html
@@ -23,13 +23,18 @@
         </p>
         <p><input type="submit" value="提交"></p>
     </form>
+    <button onclick="func2()">getCaSettingByJsonp</button>
+    <button onclick="func3()">func3</button>
 </div>
 
 </body>
 <script src="/static/js/jquery-3.1.1.js"></script>
 <script type="text/javascript">
     window.onload = function () {
-        func1();
+        {#func1();#}
+        {#getCaSetting();#}
+        {#getCaSettingByCORS();#}
+        submitJsonp();
     };
 
     function func1() {
@@ -39,7 +44,7 @@
             data: {"id": $('#select1').val()},
             dataType: "json",
             success: function (output) {
-                console.log(output[0].fields.available_ports);
+                {#console.log(output[0].fields.available_ports);#}
                 var ports = JSON.parse(output[0].fields.available_ports);
                 palceHTML = '';
                 for (var i = 0; i < ports.length; i++) {
@@ -52,5 +57,125 @@
             }
         })
     }
+
+    function getCaSetting() {
+        var strNew = '';
+        $.ajax(
+            {
+                async: false,    // 这个需要写上
+                url: '/ca_redis/port_set',
+                type: 'GET',
+                dataType: 'JSON',
+                success: function (ret) {
+                    console.log(ret);
+                    var result = new Array();
+                    var port_settings = ret.data;
+                    $.each(port_settings, function (_, value) {
+                        result.push(value.company_name);
+                    });
+                    result.push('""');
+                    strNew = result.join(',');
+                    console.log(strNew);
+                }
+            }
+        );
+        console.log(strNew);
+        return strNew
+    }
+
+    function getCaSettingByPromise() {
+        return new Promise((resolve, reject) => {
+            $.ajax(
+            {
+                async: false,    // 这个需要写上
+                url: 'http://192.168.3.46:9999/ca_redis/port_set',
+                type: 'GET',
+                dataType: 'JSONP',
+                callback: 'callback',
+                jsonpCallback: 'jsonpCallback',
+
+                success: function (ret) {
+                    ret = JSON.parse(ret);
+                    var result = new Array();
+                    var port_settings = ret.data;
+                    $.each(port_settings, function (_, value) {
+                        result.push(value.company_name);
+                    });
+                    result.push('""');
+                    resolve(result.join(','))
+                },
+                error: function(err) {
+                    reject(err)
+                }
+            }
+        );
+        })
+    }
+    
+    function getCaSettingByCORS() {
+        var strNew='';
+        $.ajax(
+            {
+                url: 'http://192.168.xx.xx:xxxx/ca_redis/port_get',
+                type: 'GET',
+                async: false, // ajax默认是true异步，此处需要使用ajax的变量作为返回值，故设为false
+
+                success: function (ret) {
+                    ret = JSON.parse(ret); // 转成json
+                    var result = new Array();
+                    var port_settings = ret.data;
+                    // 遍历port_settings，_ 是索引 ，value是没遍历一次得到的值
+                    $.each(port_settings, function (_, value) {
+                        result.push(value.company_name);
+                    });
+                    result.push('""');
+                    strNew = result;
+                },
+            }
+        );
+        return strNew;
+    }
+
+    function func2() {
+        var ret = getCaSettingByJsonp();
+        console.log('ret:' + ret)
+    }
+
+    function jsonpCallback(ret) {
+        console.log(ret);
+        ret = JSON.parse(ret);
+        console.log(ret.data);
+        var result = new Array("hello", "word", "java", "eclipse", "jsp");
+        var port_settings = ret.data;
+        console.log(port_settings);
+        $.each(port_settings, function (_, value) {
+            result.push(value.company_name);
+        });
+        var srtNew = result.push('""');
+        console.log(srtNew)
+    }
+
+    function submitJsonp() {
+        var tag = document.createElement('script'); //创建script标签
+        tag.src = 'http://192.168.3.46:8888/51CTO/jsonp'; //设置src属性
+        document.head.appendChild(tag); // 将上述script标签添加到head中
+        document.head.removeChild(tag); // 将上述script标签从head中删除
+    }
+
+    // 设置本地回调函数处理从http://127.0.0.1:9999/app1/jsonp/返回的响应，因为示例中返回的响应为HttpResponse('func("JSON");')，故此处的回调函数为func，请根据实际情况写回调函数
+    function func(arg) {
+        alert(arg);
+    }
+
+    function func3() {
+        $.ajax({
+            url: 'http://192.168.3.46:8888/51CTO/jsonp',
+            type: 'GET',
+            success: function (ret) {
+                alert(ret);
+            }
+        })
+    }
+
 </script>
 </html>
