--- a/report_fault_system/template/blog/home.html
+++ b/report_fault_system/template/blog/home.html
@@ -120,6 +120,15 @@
                 <p>
                     {{ user_form.psw.label }}: {{ user_form.psw }} <span>{{ user_form.psw.errors.0 }}</span>
                 </p>
+                <p>
+                    {{ user_form.captcha.label }}: {{ user_form.captcha }}
+                    <span>{{ user_form.captcha.errors.0 }}</span>
+                    <img src="{% url 'get_check_code' %}" onclick="freshCaptcha(this)">
+                </p>
+                <p>
+                    {{ user_form.save_login }} {{ user_form.save_login.label }}
+                    <span>{{ user_form.save_login.errors.0 }}</span>
+                </p>
                 <input type="submit" value="登录">
             </form>
         </div>
