博客主页 模板页面层级关系处理

--- a/report_fault_system/static/css/include.css
+++ b/report_fault_system/static/css/include.css
@@ -55,7 +55,10 @@ body {
 
 .pg-header .head-menus .items:hover .items-set, .pg-header .head-user .items:hover .items-set {
     display: block;
-    // 设置垂直方向的层级
+}
+
+.pg-header .head-menus .items .items-set, .pg-header .head-user .items .items-set {
+    /*设置垂直方向的层级*/
     z-index: 999;
 }
 
